# hseml-group-project-andreysvistunovhsemiem-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
feedback/: feedback.md
models/: final_model.joblib  threshold.json
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_experiments.ipynb  04_tuning.ipynb
report/: cp2_summary.json  report.md  tuning_best_params.json  tuning_results.csv
scripts/: build_report_pdf.sh
src/: api.py  config.py  cv.py  data.py  dim_reduction.py  finalize.py  interpret.py  metrics.py  modeling.py  preprocessing.py  serve.py  threshold.py  tuning.py  ui.py
tests/: test.py  test_api.py  test_cp2.py
