[project]
name = "credit-default"
version = "0.1.0"
description = "Предсказание дефолта по кредитной карте (UCI Taiwan)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "kagglehub>=0.3",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=7.4",
    "papermill>=2.4",
    "nbconvert>=7.0",
]

[tool.ruff]
line-length = 120
exclude = ["notebooks", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test.py", "test_*.py", "*_test.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
